--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<p>I am pursuing MS in ECE at Carnegie Mellon University, Pittsburgh. I will graduate in May 2022.
 										 I have done several courses related to Machine Learning, Data Science and Data Analytics like Introduction to Machine Learning, Pattern Recognition Theory, Business Intelligence and Data Mining with SAS,
 										A/B Testing Design and Analysis, Google Professional Data Analytics Course. I also have some experience on using Deep Learning for real life problems like 
-									Nuclei Segmentation and Bird Eye View Segmentation. The Nuclei Segmnetation work was published on Knowledge-Based and Intelligent Information & Engineering Systems: Proceedings of the 23rd International Conference KES2019.
+									Nuclei Segmentation and Bird Eye View Segmentation. The Nuclei Segmentation work was published on Knowledge-Based and Intelligent Information & Engineering Systems: Proceedings of the 23rd International Conference KES2019.
 		
 									Please refer below to view the publication and to check out my other projects related to Data Analysis, Data Science and Machine Learning.
 									I am looking for full time oppurtunities in the field of Data Sciene starting from June 2022.</p>
