--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"> PROTFOLIO </a>
+						<a href="index.html" class="logo"> PORTFOLIO </a>
 					</header>
 
 				<!-- Nav -->
