--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
 										<li><a href="https://github.com/SushmitaDas09/Unet_Satellite" class="button">View Project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<!-- <span class="date">April 14, 2017</span> -->
+										<h2><a href="#">Voice Controlled Robot<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/VCR.jfif" alt="" /></a>
+									<p>Devised a voice controlled robot. Developed the hardware robot, controlled through an arduino micro controller unit and an android app using the MIT app inventor.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://youtu.be/-NrwThE7kJw" class="button">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer
