--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 										<h2><a href="#">Voice Controlled Robot<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/VCR.jfif" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/VCR.png" alt="" /></a>
 									<p>Devised a voice controlled robot. Developed the hardware robot, controlled through an arduino micro controller unit and an android app using the MIT app inventor.
 									</p>
 									<ul class="actions special">
