--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
+										<h2><a href="#">Gridwatch Nigeria Data Analysis (Ongoing)<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/gridwatch.jpg" alt="" /></a>
+									<p> Need to perform analysis on real word Grid Data to draw conclusions that would help to make important decisions to reduce power cuts or other incovenience. 
+									</p>
+									<ul class="actions special">
+										<li><a href="" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<!-- <span class="date">April 24, 2017</span> -->
 										<h2><a href="#">Creative Data Analytics<br />
 										</a></h2>
 									</header>
