--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/gridwatch.jpg" alt="" /></a>
-									<p> Need to perform analysis on real word Grid Data to draw conclusions that would help to make important decisions to reduce power cuts or other incovenience. 
+									<p> Analyze Electricity Consumption Data of Nigeria to help make power related decisions such as regulating the power-cuts to minimize inconvenience of households. Understand the time-coverage of the data, tabulate any gaps in the records, and analyze available concurrent and continuous time periods to develop summary statistics of observed electric power availability.
 									</p>
 									<ul class="actions special">
 										<li><a href="" class="button">View Project</a></li>
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/abtest.jpg" alt="" /></a>
-									<p>Conducted a survey on 200 people and performed OLS regression to find the effect of providing the reading time on the willingness to read the article in a domain of interest and analyzed the outcome of interest across various covariates.</p>
+									<p>Conducted a survey on 200 people and performed Ordinary Least Squares regression to find the effect of providing the reading time on the willingness to read the article in a domain of interest and analyzed the outcome of interest across various covariates.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/SushmitaDas09/RCT" class="button">View Project</a></li>
 									</ul>
@@ -166,6 +166,20 @@
 									<a href="#" class="image fit"><img src="images/animal.jfif" alt="" /></a>
 									<p>Performed animal classification using Support Vector Machines(SVM), Convolutional Neural Network and compared their performance.
 										In addition, used CNN as a feature extractor and SVM as a classifier for the classification purpose.
+									</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/SushmitaDas09/Animal-Classification" class="button">View Project</a></li>
+									</ul>
+									
+								</article>
+									<article>
+									<header>
+										<!-- <span class="date">April 14, 2017</span> -->
+										<h2><a href="#">Weather and Electric Consumption Data Analysis<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/weather.jpg" alt="" /></a>
+									<p>Performed data cleaning and analyzed weather and electricity consumption data of one year period from France to draw conclusions based on weather pattern and energy usage and to forecast energy consumption based on weather variables.
 									</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/SushmitaDas09/Animal-Classification" class="button">View Project</a></li>
