--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 										<h2><a href="#">Weather and Electric Consumption Data Analysis<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/weather.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/weather.png" alt="" /></a>
 									<p>Performed data cleaning and analyzed weather and electricity consumption data of one year period from France to draw conclusions based on weather pattern and energy usage and to forecast energy consumption based on weather variables.
 									</p>
 									<ul class="actions special">
