--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 									<p>Performed data cleaning and analyzed weather and electricity consumption data of one year period from France to draw conclusions based on weather pattern and energy usage and to forecast energy consumption based on weather variables.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/SushmitaDas09/Animal-Classification" class="button">View Project</a></li>
+										<li><a href="" class="button">View Project</a></li>
 									</ul>
 									
 								</article>
