--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2><a href="#">BACKGROUND<br />
 									</a></h2>
-									<p>I am pursuing MS in ECE at Carnegie Mellon University, Pittsburgh. I will graduate in May 2022.
-										 I have done several courses related to Machine Learning, Data Science and Data Analytics like Introduction to Machine Learning, Pattern Recognition Theory, Business Intelligence and Data Mining with SAS,
-										A/B Testing Design and Analysis, Google Professional Data Analytics Course. I also have some experience on using Deep Learning for real life problems like 
+									<p>I am working as a Data Scientist at Meltwater. I graduated from Carnegie Mellon University in May 2022.
+										 At Meltwater, I am working on using Machine Learning/Deep Learning models for time series forecasting and anomaly detection. At CMU, I have done several courses related to Machine Learning, Data Science and Data Analytics like Introduction to Machine Learning, Pattern Recognition Theory, Business Intelligence and Data Mining with SAS,
+										A/B Testing Design and Analysis, Google Professional Data Analytics Course. I also have some internship experience on using Deep Learning for real life problems like 
 									Nuclei Segmentation and Bird Eye View Segmentation. The Nuclei Segmentation work was published on Knowledge-Based and Intelligent Information & Engineering Systems: Proceedings of the 23rd International Conference KES2019.
 		
-									Please refer below to view the publication and to check out my other projects related to Data Analysis, Data Science and Machine Learning.
+									Please refer below to view the publication and to check out my other projects related to Data Science, Data Analysis, Machine Learning and Deep Learning.
 									I am looking for full time oppurtunities in the field of Data Sciene starting from June 2022.</p>
 								</header>
 								<a href="https://github.com/SushmitaDas09/sushmitadas.github.io/raw/main/Sushmita_Das_Resume.pdf" class="image main"><img src="images/resume.jpg" alt="" /></a>
