--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Sushmita Das <br />
 						</h1>
-						<p> Email ID: <a href="mailto:sushmitd@andrew.cmu.edu"> sushmitd@andrew.cmu.edu,</a> LinkedIn: <a href="http://www.linkedin.com/in/sushmita-das09"> linkedin.com/in/sushmita-das09,</a><br />
+						<p> Email ID: <a href="mailto:sushmitd@alumni.cmu.edu"> sushmitd@andrew.cmu.edu,</a> LinkedIn: <a href="http://www.linkedin.com/in/sushmita-das09"> linkedin.com/in/sushmita-das09,</a><br />
 						Github: <a href="https://github.com/SushmitaDas09"> SushmitaDas09,</a> Tableau Public: <a href="https://public.tableau.com/app/profile/sushmita4771#!/?newProfile=&activeTab=0"> Sushmita</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -62,8 +62,8 @@
 										A/B Testing Design and Analysis, Google Professional Data Analytics Course. I also have some internship experience on using Deep Learning for real life problems like 
 									Nuclei Segmentation and Bird Eye View Segmentation. The Nuclei Segmentation work was published on Knowledge-Based and Intelligent Information & Engineering Systems: Proceedings of the 23rd International Conference KES2019.
 		
-									Please refer below to view the publication and to check out my other projects related to Data Science, Data Analysis, Machine Learning and Deep Learning.
-									I am looking for full time oppurtunities in the field of Data Sciene starting from June 2022.</p>
+									Please refer below to view the publication and to check out my other projects related to Data Science, Data Analysis, Machine Learning and Deep Learning.</p>
+									
 								</header>
 								<a href="https://github.com/SushmitaDas09/sushmitadas.github.io/raw/main/Sushmita_Das_Resume.pdf" class="image main"><img src="images/resume.jpg" alt="" /></a>
 								<ul class="actions special">
