--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Sushmita Das <br />
 						</h1>
-						<p> Email ID: <a href="mailto:sushmitd@alumni.cmu.edu"> sushmitd@andrew.cmu.edu,</a> LinkedIn: <a href="http://www.linkedin.com/in/sushmita-das09"> linkedin.com/in/sushmita-das09,</a><br />
+						<p> Email ID: <a href="mailto:sushmitd@alumni.cmu.edu"> sushmitd@alumni.cmu.edu,</a> LinkedIn: <a href="http://www.linkedin.com/in/sushmita-das09"> linkedin.com/in/sushmita-das09,</a><br />
 						Github: <a href="https://github.com/SushmitaDas09"> SushmitaDas09,</a> Tableau Public: <a href="https://public.tableau.com/app/profile/sushmita4771#!/?newProfile=&activeTab=0"> Sushmita</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
