--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="#">Gridwatch Nigeria Data Analysis (Ongoing)<br />
+										<h2><a href="#">Gridwatch Nigeria Data Reliability Analysis (Ongoing)<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/gridwatch.jpg" alt="" /></a>
 									<p> Analyze Electricity Consumption Data of Nigeria to help make power related decisions such as regulating the power-cuts to minimize inconvenience of households. Understand the time-coverage of the data, tabulate any gaps in the records, and analyze available concurrent and continuous time periods to develop summary statistics of observed electric power availability.
 									</p>
 									<ul class="actions special">
-										<li><a href="" class="button">View Project</a></li>
+										<li><a href="https://github.com/SushmitaDas09/Gridwatch-Nigeria-Data-Reliability-Analysis/tree/main" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
