--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									<p> Analyzed Electricity Consumption Data of Nigeria to help make power related decisions such as regulating the power-cuts to minimize inconvenience of households. Worked on understanding the time-coverage of the data, tabulated any gaps in the records, analyzed available concurrent continuous time periods and developed summary statistics of observed electric power availability.
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/SushmitaDas09/Gridwatch-Nigeria-Data-Reliability-Analysis/tree/main" class="button">View Project</a></li>
+										<li><a href="" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
